# swapdex

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.bridge/: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: COMMANDS.md  banner.html  cli-banner.html  social.html
docs/superpowers/plans/: 2026-07-14-swapdex-permanent-slots-phase1.md
docs/superpowers/specs/: 2026-07-14-swapdex-permanent-slots-design.md
npm/: README.md  install.js  package.json  publish.mjs
src/: atomic.rs  banner.rs  commands.rs  lib.rs  main.rs  mcp.rs  native_sessions.rs  paths.rs  proc.rs  quota.rs  secret.rs  session_link.rs  shim.rs  slots.rs  store.rs  tui.rs  usage.rs  util.rs
src/adapters/: antigravity.rs  claude.rs  codex.rs  gemini.rs  mod.rs
tests/: no_leak.rs  run.rs  soak.rs  switch.rs
