[package]
name = "swapdex"
version = "0.1.9"
edition = "2021"
description = "Switch between multiple Claude Code and Codex login accounts, locally and safely."
license = "MIT"
repository = "https://github.com/youdie006/swapdex"
homepage = "https://github.com/youdie006/swapdex"
readme = "README.md"
keywords = ["cli", "claude", "codex", "accounts", "credentials"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/*", "npm/*", ".github/*"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
zeroize = "1"
tempfile = "3"
fs2 = "0.4"
base64 = "0.22"
clap_mangen = "0.3.0"
